ingress_rule/preschool.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preschool-deployment
spec: 
  minReadySeconds: 3
  replicas: 2
  selector: 
    matchLabels: 
      app: preschool
  template: 
    metadata: 
      name: preschool-pod
      labels:
        app: preschool
    spec: 
      containers:
        - name: preschool
          image: shaikkhajaibrahim/preschool:1.1
          resources: 
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi" 
          ports: 
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: preschool-svc
spec: 
  selector: 
    app: preschool
  ports:
    - port: 80
      targetPort: 80
