ingress_rule/stake.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skateboard-deployment
spec: 
  minReadySeconds: 3
  replicas: 2
  selector: 
    matchLabels: 
      app: skateboard
  template: 
    metadata: 
      name: skateboard-pod
      labels:
        app: skateboard
    spec: 
      containers:
        - name: skateboard
          image: shaikkhajaibrahim/skateboard:1.0
          resources: 
            limits:
              cpu: "500m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi" 
          ports: 
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: skateboard-svc
spec: 
  selector: 
    app: skateboard
  ports:
    - port: 80
      targetPort: 80
