ingress_rule/ingress_rule.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-rule
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /preschool
            pathType: Prefix
            backend:
              service:
                name: preschool-svc
                port: 
                  number: 80
          - path: /skate
            pathType: Prefix
            backend:
              service: 
                name: skateboard-svc
                port: 
                  number: 80
